More 1.19.2 work